------------------- Upcoming version 8.0 -----------------------------

User tools and API improvements and changes:

- Support for the online access interface was removed.
- Support for NEC and Sun compilers was removed.

Compatibility:

- Score-P now requires a shared or PIC libbfd. Therefore, the
  configure option --with-libbfd now also accepts 'download' to
  download, build and install a libbfd at make time.
- Address-to-line lookup now requires the availability of
  dl_iterate_phdr from link.h where previously /proc/self/maps was
  parsed. In addition, symbols from dlopened shared libraries are
  considered if linker auditing is available and the LD_AUDIT
  environment variable is set to
  <prefix>/lib[/backend]/libscorep_rtld_audit.so when executing an
  instrumented binary.
- The C++ compiler requirements to build Score-P were raised from
  C++98 to C++11.

------------------- Released version 7.1 -----------------------------

Bug fixes:

- Properly handle `nvcc` compiler flags beginning with -o that do
  not set output files.
- Ensure that Score-P's compiler wrappers are not called recursively. This was
  possible as a result of  `scorep-nvcc` using a `scorep-*` host
  compiler wrapper.
- scorep-score: fix event size estimation of I/O sync events.
- Allow for OpenMP tasks outside of an OpenMP parallel region.
- Fix Fortran wrappers for MPI_Alltoallw and MPI_Ialltoallw when using
  MPI_IN_PLACE. This resolves a rare crash when passing legal NULL
  array arguments to these functions.
- Communication completed in MPI_Request_get_status is now correctly
  recorded.

------------------- Released version 7.0 -----------------------------

Features and improvements:

- Add support for recording calls to OpenCL 2.1/2.2 functions.
- Add support for recording events from the Kokkos tools interface.
  The Kokkos CUDA and HIP back ends are stable on a single device
  (see OPEN_ISSUES). The OpenMP and Pthread back ends should be
  treated as experimental.