@@ -1334,6 +1334,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1358,6 +1359,7 @@
     <version id="3.1" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1383,6 +1385,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1408,6 +1411,7 @@
     <version id="3.1" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1432,6 +1436,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1456,6 +1461,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1480,6 +1486,7 @@
     <version id="3.1" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1505,6 +1512,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1530,6 +1538,7 @@
     <version id="3.1" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1554,6 +1563,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1593,6 +1603,7 @@
     <param access="o" type_modifier="" type="MPI_Status*" name="status" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
     <version id="2.0" />
     <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
@@ -1627,6 +1638,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
     <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -1659,6 +1671,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1715,6 +1728,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
     <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -1749,6 +1763,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
     <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -1782,6 +1797,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1837,6 +1853,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -1869,6 +1886,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -1924,6 +1942,7 @@
     <version id="2.0" />
     <attribute id="operation_type">READ</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2013,6 +2032,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2046,6 +2066,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2078,6 +2099,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -2134,6 +2156,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">NON_COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2168,6 +2191,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2201,6 +2225,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">offset</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -2256,6 +2281,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
@@ -2288,6 +2314,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (buf == scorep_mpi_fortran_bottom)
     {
@@ -2343,6 +2370,7 @@
     <version id="2.0" />
     <attribute id="operation_type">WRITE</attribute>
     <attribute id="collective_type">COLLECTIVE</attribute>
+    <attribute id="operation_offset">SCOREP_IO_UNKNOWN_OFFSET</attribute>
 <xblock id="fortran"><![CDATA[
     if (status == scorep_mpi_fortran_status_ignore)
     {
